Netdll_EdingCnc - v4.3.52/Netdll_EdingCnc/cncapi v4.3.51/cncapi.h


void EXP2DF __stdcall CncGetAPIVersion(char *version);
CNC_RC EXP2DF __stdcall CncGetServerVersion(char *version);
CNC_RC EXP2DF __stdcall CncConnectServer(char *iniFileName);
CNC_RC EXP2DF __stdcall CncDisConnectServer(void);
char EXP2DF * __stdcall CncGetSetupPassword(void);
CNC_RC EXP2DF __stdcall CncSetSetupPassword(char *newPassword);
CNC_SYSTEM_CONFIG      EXP2DF * __stdcall CncGetSystemConfig(void);
CNC_INTERPRETER_CONFIG EXP2DF * __stdcall CncGetInterpreterConfig(void);
CNC_SAFETY_CONFIG      EXP2DF * __stdcall CncGetSafetyConfig(void);
CNC_TRAFFIC_LIGHT_CFG  EXP2DF * __stdcall CncGetTrafficLightConfig(void);
CNC_PROBING_CFG        EXP2DF * __stdcall CncGetProbingConfig(void);
CNC_IO_CONFIG          EXP2DF * __stdcall CncGetIOConfig(void);
CNC_I2CGPIO_CARD_CONFIG EXP2DF * __stdcall CncGetGPIOConfig(void);
CNC_JOINT_CFG          EXP2DF * __stdcall CncGetJointConfig(int joint);
CNC_SPINDLE_CONFIG     EXP2DF * __stdcall CncGetSpindleConfig(int spindle);
CNC_FEEDSPEED_CFG      EXP2DF * __stdcall CncGetFeedSpeedConfig(void);
CNC_HANDWHEEL_CFG      EXP2DF * __stdcall CncGetHandwheelConfig(void);
CNC_TRAJECTORY_CFG     EXP2DF * __stdcall CncGetTrajectoryConfig(void);
CNC_KIN_CFG            EXP2DF * __stdcall CncGetKinConfig(void);
CNC_UI_CFG             EXP2DF * __stdcall CncGetUIConfig(void);
CNC_CAMERA_CONFIG      EXP2DF * __stdcall CncGetCameraConfig(void);
CNC_THC_CFG            EXP2DF * __stdcall CncGetTHCConfig(void);
CNC_SERVICE_CFG        EXP2DF * __stdcall CncGetServiceConfig(void);
CNC_3DPRINTING_CONFIG  EXP2DF * __stdcall CncGet3DPrintConfig(void);
CNC_UIO_CONFIG         EXP2DF * __stdcall CncGetUIOConfig(void);
CNC_VACUUMBED_CONFIG   EXP2DF * __stdcall CncGetVacuumConfig(void);
CNC_IO_PORT_STS        EXP2DF * __stdcall CncGetIOStatus(CNC_IO_ID ioID);
CNC_GPIO_PORT_STS      EXP2DF * __stdcall CncGetGPIOStatus(int cardNr, CNC_GPIO_ID ioID);
CNC_RC EXP2DF __stdcall CncStoreIniFile(int saveFixtures);
CNC_RC EXP2DF __stdcall CncReInitialize(void);
CNC_RC EXP2DF __stdcall CncGetMacroFileName(char *name);
CNC_RC EXP2DF __stdcall CncGetUserMacroFileName(char *name);
CNC_RC EXP2DF __stdcall CncSetMacroFileName(char *name);
CNC_RC EXP2DF __stdcall CncSetUserMacroFileName(char *name);
char EXP2DF * __stdcall CncGetControllerFirmwareVersion(void);
CNC_RC EXP2DF __stdcall CncGetControllerSerialNumber(unsigned char *serial);
int EXP2DF __stdcall CncGetControllerNumberOfFrequencyItems(void);
double EXP2DF __stdcall CncGetControllerFrequencyItem(unsigned int index);
int EXP2DF __stdcall CncGetControllerConnectionNumberOfItems(void);
char EXP2DF * __stdcall CncGetControllerConnectionItem(int itemNumber);
void EXP2DF __stdcall CncGetNrOfAxesOnController(int *maxNrOfAxes, int *availableNrOfAxes);
int EXP2DF __stdcall CncGetAxisIsConfigured(int axis, bool includingSlaves);
int EXP2DF __stdcall CncGetFirmwareHasOptions(void);
CNC_RC EXP2DF __stdcall CncGetActiveOptions(char			*actCustomerName,
        int			*actNumberOfAxes,
        unsigned int	*actCPUEnabled,
        unsigned int	*actGPIOAVXEnabled,
        unsigned int	*actGPIOEDIEnabled,
        unsigned int	*actWolfcutCameraEnabled,
        unsigned int	*actTURNMACRO,
        unsigned int	*actXHCPendant,
        unsigned int	*actLimitedSoftwareEnabled);
CNC_RC EXP2DF __stdcall CncGetOptionRequestCode( char          *newCustomerName,
        int           newNumberOfAxes,
        unsigned int	newGPIOAVXEnabled,
        unsigned int	newGPIOEDIEnabled,
        unsigned int	newPLASMAEnabled,
        unsigned int	newTURMACROEnabled,
        unsigned int	newXHCPendant,
        unsigned int	newLimitedSoftwareEnabled,
        char          *requestCode );
CNC_RC EXP2DF __stdcall CncGetOptionRequestCodeCurrent(char *requestCode);
CNC_RC EXP2DF __stdcall CncActivateOption(char *activationKey);
CNC_JOINT_STS EXP2DF * __stdcall CncGetJointStatus(int joint);
CNC_TOOL_DATA EXP2DF __stdcall CncGetToolData(int index);
CNC_RC EXP2DF __stdcall CncUpdateToolData(CNC_TOOL_DATA *pTool, int index);
CNC_RC EXP2DF __stdcall CncLoadToolTable(void);
double EXP2DF __stdcall CncGetVariable(int varIndex);
void EXP2DF __stdcall CncSetVariable(int varIndex, double value);
CNC_RUNNING_STATUS           EXP2DF * __stdcall CncGetRunningStatus(void);
CNC_MOTION_STATUS            EXP2DF * __stdcall CncGetMotionStatus(void);
CNC_CONTROLLER_STATUS        EXP2DF * __stdcall CncGetControllerStatus(void);
CNC_CONTROLLER_CONFIG_STATUS EXP2DF * __stdcall CncGetControllerConfigStatus(void);
CNC_TRAFFIC_LIGHT_STATUS     EXP2DF * __stdcall CncGetTrafficLightStatus(void);
CNC_JOB_STATUS               EXP2DF * __stdcall CncGetJobStatus(void);
CNC_TRACKING_STATUS          EXP2DF * __stdcall CncGetTrackingStatus(void);
CNC_THC_STATUS               EXP2DF * __stdcall CncGetTHCStatus(void);
CNC_NESTING_STATUS           EXP2DF * __stdcall CncGetNestingStatus(void);
CNC_KIN_STATUS               EXP2DF * __stdcall CncGetKinStatus(void);
CNC_SPINDLE_STS              EXP2DF * __stdcall CncGetSpindleStatus(void);
CNC_PAUSE_STS                EXP2DF * __stdcall CncGetPauseStatus(void);
CNC_SEARCH_STATUS            EXP2DF * __stdcall CncGetSearchStatus(void);
CNC_3DPRINTING_STS           EXP2DF * __stdcall CncGet3DPrintStatus(void);
CNC_COMPENSATION_STATUS      EXP2DF * __stdcall CncGetCompensationStatus(void);
CNC_VACUUM_STATUS            EXP2DF * __stdcall CncGetVacuumStatus(void);
int EXP2DF __stdcall CncGet10msHeartBeat(void);
int EXP2DF __stdcall CncIsServerConnected(void);
CNC_IE_STATE EXP2DF __stdcall CncGetState(void);
char EXP2DF * __stdcall CncGetStateText(CNC_IE_STATE state);
int EXP2DF __stdcall CncInMillimeterMode(void);
CNC_PLANE EXP2DF __stdcall CncGetActualPlane(void);
CNC_CART_DOUBLE EXP2DF __stdcall CncGetWorkPosition(void);
CNC_JOINT_DOUBLE EXP2DF __stdcall CncGetMotorPosition(void);
CNC_CART_DOUBLE EXP2DF __stdcall CncGetMachinePosition(void);
void EXP2DF __stdcall CncGetMachineZeroWorkPoint(CNC_CART_DOUBLE *pos, int *rotationActive);
CNC_CART_DOUBLE EXP2DF __stdcall CncGetActualOriginOffset(void);
double EXP2DF __stdcall CncGetActualToolZOffset(void);
double EXP2DF __stdcall CncGetActualToolXOffset(void);
double EXP2DF __stdcall CncGetActualG68Rotation(void);
CNC_PLANE EXP2DF __stdcall CncGetActualG68RotationPlane(void);
void EXP2DF __stdcall CncGetCurrentGcodesText(char *activeGCodes);
void EXP2DF __stdcall CncGetCurrentMcodesText(char *activeMCodes);
void EXP2DF __stdcall CncGetCurrentGcodeSettingsText(char *actualGCodeSettings);
double EXP2DF __stdcall CncGetProgrammedSpeed(void);
double EXP2DF __stdcall CncGetProgrammedFeed(void);
int EXP2DF __stdcall CncGetCurrentToolNumber(void);
int EXP2DF __stdcall CncG43Active(void);
int EXP2DF __stdcall CncG95Active(void);
int EXP2DF __stdcall  CncGetCurInterpreterLineNumber(void);
int EXP2DF __stdcall CncGetCurInterpreterLineText( char * text);
int EXP2DF __stdcall CncCurrentInterpreterLineContainsToolChange(void);
int EXP2DF __stdcall CncGetSwLimitError(void);
int EXP2DF __stdcall CncGetFifoError(void);
int EXP2DF __stdcall CncGetEMStopActive(void);
int  EXP2DF __stdcall CncGetAllAxesHomed(void);
int  EXP2DF __stdcall CncGetSafetyMode(void);
CNC_KINEMATICS_TYPE EXP2DF __stdcall CncKinGetActiveType(void);
int EXP2DF __stdcall CncKinActivate(int active);
int EXP2DF __stdcall CncKinInit(void);
int EXP2DF __stdcall CncKinControl(KIN_CONTROL_ID controlID, KIN_CONTROLDATA *pControlData);
CNC_VECTOR EXP2DF __stdcall CncKinGetARotationPoint(void);
char EXP2DF * __stdcall CncGetIOName(CNC_IO_ID id);
int EXP2DF __stdcall CncGetOutput(CNC_IO_ID id);
int EXP2DF __stdcall CncGetOutputRaw(CNC_IO_ID id);
int EXP2DF __stdcall CncGetGPIOOutput(int gpioCardIndex, CNC_GPIO_ID ioId);
typedef int (*CNC_KEEP_UI_ALIVE_FUNCTION)(void * pParameter);