Netdll_EdingCnc - v4.3.52/Netdll_EdingCnc/cncapi/python/cncapi/cncfuncs.py

from ctypes import c_void_p, c_char_p, c_int, c_short, c_char, c_long, c_uint, c_bool, c_double, c_ulong, c_float, Structure, c_wchar, c_wchar_p, POINTER, c_ubyte, Union, create_string_buffer, byref
from cncapi.cncdefines import *
from cncapi.cncenums import *
from cncapi.cncstructs import *

import platform
if platform.architecture()[1] == 'ELF':
    from ctypes import PYFUNCTYPE, cdll

    _mydll = cdll.LoadLibrary("libcncapi.so")
else:
    from ctypes import WINFUNCTYPE, windll

    if platform.architecture()[0] == '64bit':
        _mydll = windll.LoadLibrary("cncapi64.dll")
    else:
        _mydll = windll.LoadLibrary("cncapi.dll")

try:
    CNC_KEEP_UI_ALIVE_FUNCTION = WINFUNCTYPE(c_void_p)
except:
    CNC_KEEP_UI_ALIVE_FUNCTION = PYFUNCTYPE(c_void_p)

_mydll.CncGetAPIVersion.argtypes = [ c_char_p ]
_mydll.CncGetAPIVersion.restype = None

_mydll.CncGetServerVersion.argtypes = [ c_char_p ]
_mydll.CncGetServerVersion.restype = c_int

_mydll.CncConnectServer.argtypes = [ c_char_p ]
_mydll.CncConnectServer.restype = c_int

_mydll.CncDisConnectServer.argtypes = [  ]
_mydll.CncDisConnectServer.restype = c_int

_mydll.CncGetSetupPassword.argtypes = [  ]
_mydll.CncGetSetupPassword.restype = c_char_p

_mydll.CncSetSetupPassword.argtypes = [ c_char_p ]
_mydll.CncSetSetupPassword.restype = c_int

_mydll.CncGetSystemConfig.argtypes = [  ]
_mydll.CncGetSystemConfig.restype = POINTER(CNC_SYSTEM_CONFIG)

_mydll.CncGetInterpreterConfig.argtypes = [  ]
_mydll.CncGetInterpreterConfig.restype = POINTER(CNC_INTERPRETER_CONFIG)

_mydll.CncGetSafetyConfig.argtypes = [  ]
_mydll.CncGetSafetyConfig.restype = POINTER(CNC_SAFETY_CONFIG)

_mydll.CncGetTrafficLightConfig.argtypes = [  ]
_mydll.CncGetTrafficLightConfig.restype = POINTER(CNC_TRAFFIC_LIGHT_CFG)

_mydll.CncGetProbingConfig.argtypes = [  ]
_mydll.CncGetProbingConfig.restype = POINTER(CNC_PROBING_CFG)

_mydll.CncGetIOConfig.argtypes = [  ]
_mydll.CncGetIOConfig.restype = POINTER(CNC_IO_CONFIG)

_mydll.CncGetGPIOConfig.argtypes = [  ]
_mydll.CncGetGPIOConfig.restype = POINTER(CNC_I2CGPIO_CARD_CONFIG)

_mydll.CncGetJointConfig.argtypes = [ c_int ]
_mydll.CncGetJointConfig.restype = POINTER(CNC_JOINT_CFG)

_mydll.CncGetSpindleConfig.argtypes = [ c_int ]
_mydll.CncGetSpindleConfig.restype = POINTER(CNC_SPINDLE_CONFIG)

_mydll.CncGetFeedSpeedConfig.argtypes = [  ]
_mydll.CncGetFeedSpeedConfig.restype = POINTER(CNC_FEEDSPEED_CFG)

_mydll.CncGetHandwheelConfig.argtypes = [  ]
_mydll.CncGetHandwheelConfig.restype = POINTER(CNC_HANDWHEEL_CFG)

_mydll.CncGetTrajectoryConfig.argtypes = [  ]
_mydll.CncGetTrajectoryConfig.restype = POINTER(CNC_TRAJECTORY_CFG)

_mydll.CncGetKinConfig.argtypes = [  ]
_mydll.CncGetKinConfig.restype = POINTER(CNC_KIN_CFG)

_mydll.CncGetUIConfig.argtypes = [  ]
_mydll.CncGetUIConfig.restype = POINTER(CNC_UI_CFG)

_mydll.CncGetCameraConfig.argtypes = [  ]
_mydll.CncGetCameraConfig.restype = POINTER(CNC_CAMERA_CONFIG)

_mydll.CncGetTHCConfig.argtypes = [  ]
_mydll.CncGetTHCConfig.restype = POINTER(CNC_THC_CFG)

_mydll.CncGetServiceConfig.argtypes = [  ]
_mydll.CncGetServiceConfig.restype = POINTER(CNC_SERVICE_CFG)

_mydll.CncGet3DPrintConfig.argtypes = [  ]
_mydll.CncGet3DPrintConfig.restype = POINTER(CNC_3DPRINTING_CONFIG)

_mydll.CncGetUIOConfig.argtypes = [  ]
_mydll.CncGetUIOConfig.restype = POINTER(CNC_UIO_CONFIG)

_mydll.CncGetVacuumConfig.argtypes = [  ]
_mydll.CncGetVacuumConfig.restype = POINTER(CNC_VACUUMBED_CONFIG)

_mydll.CncGetIOStatus.argtypes = [ c_int ]
_mydll.CncGetIOStatus.restype = POINTER(CNC_IO_PORT_STS)

_mydll.CncGetGPIOStatus.argtypes = [ c_int, c_int ]
_mydll.CncGetGPIOStatus.restype = POINTER(CNC_GPIO_PORT_STS)

_mydll.CncStoreIniFile.argtypes = [ c_int ]
_mydll.CncStoreIniFile.restype = c_int

_mydll.CncReInitialize.argtypes = [  ]
_mydll.CncReInitialize.restype = c_int

_mydll.CncGetMacroFileName.argtypes = [ c_char_p ]
_mydll.CncGetMacroFileName.restype = c_int

_mydll.CncGetUserMacroFileName.argtypes = [ c_char_p ]
_mydll.CncGetUserMacroFileName.restype = c_int

_mydll.CncSetMacroFileName.argtypes = [ c_char_p ]
_mydll.CncSetMacroFileName.restype = c_int

_mydll.CncSetUserMacroFileName.argtypes = [ c_char_p ]
_mydll.CncSetUserMacroFileName.restype = c_int

_mydll.CncGetControllerFirmwareVersion.argtypes = [  ]
_mydll.CncGetControllerFirmwareVersion.restype = c_char_p

_mydll.CncGetControllerSerialNumber.argtypes = [ POINTER(c_ubyte) ]
_mydll.CncGetControllerSerialNumber.restype = c_int

_mydll.CncGetControllerNumberOfFrequencyItems.argtypes = [  ]
_mydll.CncGetControllerNumberOfFrequencyItems.restype = c_int

_mydll.CncGetControllerFrequencyItem.argtypes = [ c_uint ]
_mydll.CncGetControllerFrequencyItem.restype = c_double

_mydll.CncGetControllerConnectionNumberOfItems.argtypes = [  ]
_mydll.CncGetControllerConnectionNumberOfItems.restype = c_int

_mydll.CncGetControllerConnectionItem.argtypes = [ c_int ]
_mydll.CncGetControllerConnectionItem.restype = c_char_p

_mydll.CncGetNrOfAxesOnController.argtypes = [ POINTER(c_int), POINTER(c_int) ]
_mydll.CncGetNrOfAxesOnController.restype = None

_mydll.CncGetAxisIsConfigured.argtypes = [ c_int, c_bool ]
_mydll.CncGetAxisIsConfigured.restype = c_int

_mydll.CncGetFirmwareHasOptions.argtypes = [  ]
_mydll.CncGetFirmwareHasOptions.restype = c_int

_mydll.CncGetActiveOptions.argtypes = [ POINTER(c_char), POINTER(c_int), POINTER(c_uint), POINTER(c_uint), POINTER(c_uint), POINTER(c_uint), POINTER(c_uint), POINTER(c_uint), POINTER(c_uint) ]
_mydll.CncGetActiveOptions.restype = c_int

_mydll.CncGetOptionRequestCode.argtypes = [ c_char_p, c_int, c_uint, c_uint, c_uint, c_uint, c_uint, c_uint, c_char_p ]
_mydll.CncGetOptionRequestCode.restype = c_int

_mydll.CncGetOptionRequestCodeCurrent.argtypes = [ c_char_p ]
_mydll.CncGetOptionRequestCodeCurrent.restype = c_int

_mydll.CncActivateOption.argtypes = [ c_char_p ]
_mydll.CncActivateOption.restype = c_int

_mydll.CncGetJointStatus.argtypes = [ c_int ]
_mydll.CncGetJointStatus.restype = POINTER(CNC_JOINT_STS)

_mydll.CncGetToolData.argtypes = [ c_int ]
_mydll.CncGetToolData.restype = CNC_TOOL_DATA

_mydll.CncUpdateToolData.argtypes = [ POINTER(CNC_TOOL_DATA), c_int ]
_mydll.CncUpdateToolData.restype = c_int

_mydll.CncLoadToolTable.argtypes = [  ]
_mydll.CncLoadToolTable.restype = c_int

_mydll.CncGetVariable.argtypes = [ c_int ]
_mydll.CncGetVariable.restype = c_double

_mydll.CncSetVariable.argtypes = [ c_int, c_double ]
_mydll.CncSetVariable.restype = None

_mydll.CncGetRunningStatus.argtypes = [  ]
_mydll.CncGetRunningStatus.restype = POINTER(CNC_RUNNING_STATUS)

_mydll.CncGetMotionStatus.argtypes = [  ]
_mydll.CncGetMotionStatus.restype = POINTER(CNC_MOTION_STATUS)

_mydll.CncGetControllerStatus.argtypes = [  ]
_mydll.CncGetControllerStatus.restype = POINTER(CNC_CONTROLLER_STATUS)

_mydll.CncGetControllerConfigStatus.argtypes = [  ]
_mydll.CncGetControllerConfigStatus.restype = POINTER(CNC_CONTROLLER_CONFIG_STATUS)

_mydll.CncGetTrafficLightStatus.argtypes = [  ]
_mydll.CncGetTrafficLightStatus.restype = POINTER(CNC_TRAFFIC_LIGHT_STATUS)

_mydll.CncGetJobStatus.argtypes = [  ]
_mydll.CncGetJobStatus.restype = POINTER(CNC_JOB_STATUS)

_mydll.CncGetTrackingStatus.argtypes = [  ]
_mydll.CncGetTrackingStatus.restype = POINTER(CNC_TRACKING_STATUS)

_mydll.CncGetTHCStatus.argtypes = [  ]
_mydll.CncGetTHCStatus.restype = POINTER(CNC_THC_STATUS)

_mydll.CncGetNestingStatus.argtypes = [  ]
_mydll.CncGetNestingStatus.restype = POINTER(CNC_NESTING_STATUS)

_mydll.CncGetKinStatus.argtypes = [  ]
_mydll.CncGetKinStatus.restype = POINTER(CNC_KIN_STATUS)

_mydll.CncGetSpindleStatus.argtypes = [  ]
_mydll.CncGetSpindleStatus.restype = POINTER(CNC_SPINDLE_STS)

_mydll.CncGetPauseStatus.argtypes = [  ]
_mydll.CncGetPauseStatus.restype = POINTER(CNC_PAUSE_STS)

_mydll.CncGetSearchStatus.argtypes = [  ]
_mydll.CncGetSearchStatus.restype = POINTER(CNC_SEARCH_STATUS)

_mydll.CncGet3DPrintStatus.argtypes = [  ]
_mydll.CncGet3DPrintStatus.restype = POINTER(CNC_3DPRINTING_STS)

_mydll.CncGetCompensationStatus.argtypes = [  ]
_mydll.CncGetCompensationStatus.restype = POINTER(CNC_COMPENSATION_STATUS)

_mydll.CncGetVacuumStatus.argtypes = [  ]
_mydll.CncGetVacuumStatus.restype = POINTER(CNC_VACUUM_STATUS)

_mydll.CncGet10msHeartBeat.argtypes = [  ]
_mydll.CncGet10msHeartBeat.restype = c_int

_mydll.CncIsServerConnected.argtypes = [  ]
_mydll.CncIsServerConnected.restype = c_int

_mydll.CncGetState.argtypes = [  ]
_mydll.CncGetState.restype = c_int

_mydll.CncGetStateText.argtypes = [ c_int ]
_mydll.CncGetStateText.restype = c_char_p

_mydll.CncInMillimeterMode.argtypes = [  ]
_mydll.CncInMillimeterMode.restype = c_int

_mydll.CncGetActualPlane.argtypes = [  ]
_mydll.CncGetActualPlane.restype = c_int

_mydll.CncGetWorkPosition.argtypes = [  ]
_mydll.CncGetWorkPosition.restype = CNC_CART_DOUBLE

_mydll.CncGetMotorPosition.argtypes = [  ]
_mydll.CncGetMotorPosition.restype = CNC_JOINT_DOUBLE

_mydll.CncGetMachinePosition.argtypes = [  ]
_mydll.CncGetMachinePosition.restype = CNC_CART_DOUBLE

_mydll.CncGetMachineZeroWorkPoint.argtypes = [ POINTER(CNC_CART_DOUBLE), POINTER(c_int) ]
_mydll.CncGetMachineZeroWorkPoint.restype = None

_mydll.CncGetActualOriginOffset.argtypes = [  ]
_mydll.CncGetActualOriginOffset.restype = CNC_CART_DOUBLE

_mydll.CncGetActualToolZOffset.argtypes = [  ]
_mydll.CncGetActualToolZOffset.restype = c_double

_mydll.CncGetActualToolXOffset.argtypes = [  ]
_mydll.CncGetActualToolXOffset.restype = c_double

_mydll.CncGetActualG68Rotation.argtypes = [  ]
_mydll.CncGetActualG68Rotation.restype = c_double

_mydll.CncGetActualG68RotationPlane.argtypes = [  ]
_mydll.CncGetActualG68RotationPlane.restype = c_int

_mydll.CncGetCurrentGcodesText.argtypes = [ c_char_p ]
_mydll.CncGetCurrentGcodesText.restype = None

_mydll.CncGetCurrentMcodesText.argtypes = [ c_char_p ]
_mydll.CncGetCurrentMcodesText.restype = None

_mydll.CncGetCurrentGcodeSettingsText.argtypes = [ c_char_p ]
_mydll.CncGetCurrentGcodeSettingsText.restype = None

_mydll.CncGetProgrammedSpeed.argtypes = [  ]
_mydll.CncGetProgrammedSpeed.restype = c_double

_mydll.CncGetProgrammedFeed.argtypes = [  ]
_mydll.CncGetProgrammedFeed.restype = c_double

_mydll.CncGetCurrentToolNumber.argtypes = [  ]
_mydll.CncGetCurrentToolNumber.restype = c_int

_mydll.CncG43Active.argtypes = [  ]
_mydll.CncG43Active.restype = c_int

_mydll.CncG95Active.argtypes = [  ]
_mydll.CncG95Active.restype = c_int

_mydll.CncGetCurInterpreterLineNumber.argtypes = [  ]
_mydll.CncGetCurInterpreterLineNumber.restype = c_int

_mydll.CncGetCurInterpreterLineText.argtypes = [ c_char_p ]
_mydll.CncGetCurInterpreterLineText.restype = c_int

_mydll.CncCurrentInterpreterLineContainsToolChange.argtypes = [  ]
_mydll.CncCurrentInterpreterLineContainsToolChange.restype = c_int

_mydll.CncGetSwLimitError.argtypes = [  ]
_mydll.CncGetSwLimitError.restype = c_int

_mydll.CncGetFifoError.argtypes = [  ]
_mydll.CncGetFifoError.restype = c_int

_mydll.CncGetEMStopActive.argtypes = [  ]
_mydll.CncGetEMStopActive.restype = c_int

_mydll.CncGetAllAxesHomed.argtypes = [  ]
_mydll.CncGetAllAxesHomed.restype = c_int

_mydll.CncGetSafetyMode.argtypes = [  ]
_mydll.CncGetSafetyMode.restype = c_int

_mydll.CncKinGetActiveType.argtypes = [  ]
_mydll.CncKinGetActiveType.restype = c_int

_mydll.CncKinActivate.argtypes = [ c_int ]
_mydll.CncKinActivate.restype = c_int

_mydll.CncKinInit.argtypes = [  ]
_mydll.CncKinInit.restype = c_int

_mydll.CncKinControl.argtypes = [ c_int, POINTER(KIN_CONTROLDATA) ]
_mydll.CncKinControl.restype = c_int

_mydll.CncKinGetARotationPoint.argtypes = [  ]
_mydll.CncKinGetARotationPoint.restype = CNC_VECTOR

_mydll.CncGetIOName.argtypes = [ c_int ]
_mydll.CncGetIOName.restype = c_char_p

_mydll.CncGetOutput.argtypes = [ c_int ]
_mydll.CncGetOutput.restype = c_int

_mydll.CncGetOutputRaw.argtypes = [ c_int ]
_mydll.CncGetOutputRaw.restype = c_int

_mydll.CncGetGPIOOutput.argtypes = [ c_int, c_int ]
_mydll.CncGetGPIOOutput.restype = c_int
